--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "1st",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
     "bash": "^0.0.1",
@@ -20,6 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "path-to-regexp": "^8.2.0",
     "socket.io": "^4.8.1",
     "vite": "^6.2.5"
   },
