--- a/package.json
+++ b/package.json
@@ -13,23 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.1",
-    "bash": "^0.0.1",
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "daisyui": "^5.0.12",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.1",
-    "path-to-regexp": "^8.2.0",
-    "socket.io": "^4.8.1",
-    "vite": "^6.2.5"
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "nodemon": "^3.1.9",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.1"
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^5.0.13",
+    "nodemon": "^3.0.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.17"
   }
 }
